--- a/style.css
+++ b/style.css
@@ -6,3 +6,31 @@
 	color: #FFF;
 	font-size: 24px;
 }
+html,
+body {
+	height: 100%;
+}
+header {
+	background-image: url(img/castelo.jpg);
+	background-size: cover;
+	background-position: top center;
+	height: 100%;
+}
+
+.topcasa-banner{
+	color: #FFF;
+	background-color: rgb(0, 0, 0, 0.5);
+	padding: 10px;
+
+}
+
+footer{
+	background-color: #333;
+	color: #FFF;
+	padding: 20px;
+	margin-top: 10px;
+}
+
+footer address:last-child {
+	margin-bottom: 0px;
+}
